# cuda-battery

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile.sh  hipify_directory.sh  hipify_tests.sh  test.sh
demo/: CMakeLists.txt  README.md
demo/include/: par_map.hpp
demo/src/: demo.cpp  demo_hip.cpp  inkernel_allocation.cpp  inkernel_allocation_hip.cpp  simple.cpp  simple_hip.cpp
demo/tests/: demo_test_cpu.cpp  demo_test_gpu.cpp  demo_test_gpu_hip.cpp
hip/: CMakeLists.txt  CMakePresets.json
hip/include/battery/: algorithm.hpp  allocator.hpp  bitset.hpp  dynamic_bitset.hpp  memory.hpp  root_ptr.hpp  shared_ptr.hpp  string.hpp  tuple.hpp  unique_ptr.hpp  utility.hpp  variant.hpp  vector.hpp
hip/tests/: CMakeLists.txt  allocator_test_gpu.cpp  bitset_test.cpp  shared_ptr_test.cpp  string_test.cpp  unique_ptr_test.cpp  utility_test.cpp  utility_test_cpu_gpu.cpp
include/: allocator.hpp  bitset.hpp  darray.hpp  memory.hpp  shared_ptr.hpp  string.hpp  tuple.hpp  unique_ptr.hpp  utility.hpp  variant.hpp  vector.hpp
include/battery/: algorithm.hpp  allocator.hpp  bitset.hpp  dynamic_bitset.hpp  memory.hpp  shared_ptr.hpp  string.hpp  tuple.hpp  unique_ptr.hpp  utility.hpp  variant.hpp  vector.hpp
src/: allocator.cpp  utility.cpp
tests/: CMakeLists.txt  algorithm_test.cpp  allocator_test_gpu.cpp  allocator_test_gpu_hip.cpp  bitset_test.cpp  darray_test.cpp  gpu_allocator.cpp  polymorphic_darray_test.cpp  shared_ptr_test.cpp  string_test.cpp  unique_ptr_test.cpp  unique_ptr_test_gpu.cpp  unique_ptr_test_gpu_hip.cpp  utility_test.cpp  utility_test_cpu.cpp  utility_test_cpu_gpu.cpp  utility_test_cpu_gpu_hip.cpp  variant_test.cpp  vector_test.cpp
